--- a/guide_lexique.html
+++ b/guide_lexique.html
@@ -44,8 +44,8 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="simulation_budget.html">Estimez votre budget</a>
-            <a class="dropdown-item" href="#">Acheter ou louer</a>
-            <a class="dropdown-item" href="#">Votre plan de financement</a>
+            <a class="dropdown-item" href="simulation_acheterlouer.html">Acheter ou louer</a>
+            <a class="dropdown-item" href="simulation_plan.html">Votre plan de financement</a>
           </div>
         </li>
         <li class="nav-item">
@@ -62,7 +62,7 @@
 
 <div class="container" style="padding-bottom:5vh;min-height:700px;">
     <div class="page-header">
-        <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:8vh">Lexique de l'immobilier</center>
+        <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:6vh">Lexique de l'immobilier</center>
     </div> 
     <input class="form-control" id="myInput" type="text" placeholder="Cherchez un mot dans le lexique...">
     <br>
