--- a/guide_timeline.html
+++ b/guide_timeline.html
@@ -45,8 +45,8 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="simulation_budget.html">Estimez votre budget</a>
-            <a class="dropdown-item" href="#">Acheter ou louer</a>
-            <a class="dropdown-item" href="#">Votre plan de financement</a>
+            <a class="dropdown-item" href="simulation_acheterlouer.html">Acheter ou louer</a>
+            <a class="dropdown-item" href="simulation_plan.html">Votre plan de financement</a>
           </div>
         </li>
         <li class="nav-item">
@@ -63,7 +63,7 @@
 
 <div class="container" style="padding-bottom:5vh">
     <div class="page-header">
-        <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:8vh">Les grandes étapes</center>
+        <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:6vh">Les grandes étapes</center>
     </div>
 
     <ul class="timeline">
